--- a/app/views/tab_b.html
+++ b/app/views/tab_b.html
@@ -16,7 +16,7 @@
       </div>
 
       <div class="loading inline-block" ng-hide="loaded">
-        <a href="" class="btn"><i class="glyphicon glyphicon-cog"></i></a>
+        <a href="" class="btn"><i class="glyphicon glyphicon-refresh"></i></a>
       </div>
 
 
