added preliminary accessibility support

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -34,22 +34,22 @@
     <div class="col-md-12">
       <ul class="nav nav-tabs nav-justified">
         <li ui-sref="app.tabb({id:1})"  ng-class="{ active: isActive('/tab-b/1') }">
-            <a>
+            <a href="">
               <i class="glyphicon glyphicon-share "></i> Quick Reports
             </a>
         </li>
         <li ui-sref="app.taba({id:2})"ng-class="{ active: isActive('/tab-a/2') }">
-          <a>
+          <a href="">
             <i class="glyphicon glyphicon-star"></i> Folders
           </a>
         </li>
         <li ui-sref="app.tabb({id:3})" ng-class="{ active: isActive('/tab-b/3') }">
-          <a>
+          <a href="">
             <i class="glyphicon glyphicon-folder-open"></i> My Team Folders
           </a>
         </li>
-        <li  ui-sref="app.taba({id:4})" ng-class="{ active: isActive('/tab-a/4') }">
-          <a>
+        <li ui-sref="app.taba({id:4})" ng-class="{ active: isActive('/tab-a/4') }">
+            <a href="">
               <i class="glyphicon glyphicon-list-alt"></i> Public Folders
             </a>
           </li>
