--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -86,11 +86,15 @@ body {
   display: inline-block;
 }
 
-
+.help-inline.error {
+    position: absolute;
+    font-size: 10px;
+    color:red;
+}
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
-    
+
 
 
 }
